# python-workshop

./: .coveragerc  .gitignore  LICENSE  README.md  dev-requirements.in  dev-requirements.txt  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  tox.ini
docs/module-1/: README.md
docs/module-1/topics/: 01-environment-setup.md  02-static-analysis.md  03-packaging-setup.md
docs/module-2/: README.md  animals.py  coordinates.py  pluralize.py
docs/module-2/topics/: 01-type-hints.md  02-abstractions.md  03-domain-modeling.md  04-programming-styles.md  05-testing.md
docs/module-3/: README.md  diamond.py  gil.py
docs/module-3/topics/: 01-gotchas.md  02-concurrency.md  03-pandas.md
modules/module-1/: README.md
modules/module-1/topics/: 01-environment-setup.md  02-static-analysis.md  03-packaging-setup.md
modules/module-2/: README.md  animals.py  coordinates.py
modules/module-2/topics/: 01-programming-styles.md  01-type-hints.md  02-abstractions.md  02-type-hints.md  03-abstractions.md  04-domain-modeling.md  04-programming-styles.md  05-testing.md
modules/module-3/: README.md
src/distance_matrix/: __main__.py  async_runner.py  calculators.py  cli.py  const.py  dask_runner.py  executors.py  inputs.py  main.py  outputs.py  pandas_runner.py  utils.py
src/distance_matrix/calculators/: functional.py  numpy.py  objects.py
src/distance_matrix/concurrency/: producer_consumer.py  queue.py  thread_pool.py
src/distance_matrix/models/: coordinates.py  (+3 more)
tests/integration/: test_distance_matrix.py
tests/models/: test_coordinates.py
tests/unit/: test_utils.py
(+6 files in other folders)
