[metadata]
name = distance-matrix
version = 0.0.1
author = Alan Pinkert
author_email = alan.pinkert@example.com
description = A Python package for calculating distances in bulk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alanisaac/python-workshop
project_urls =
    Bug Tracker = https://github.com/alanisaac/python-workshop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    bokeh >= 2.4.2
    dask >= 2022.4.1
    distributed >= 2022.4.1
    pandas >= 1.4.2
    pandera >= 0.10.1
    pydantic >= 1.7

[options.packages.find]
where = src